@@ -54,7 +54,7 @@
   Return the configuration used during test.\n
 \n
   There is a difference between configuration and upgrader for\n
-  this values. This informations should be unified later but \n
+  this values. This informations should be unified later but\n
   for now it is better keep the difference here.\n
 """\n
 from DateTime import DateTime\n
@@ -64,8 +64,7 @@ configuration_dict = {\n
         \'customer_organisation_title\': \'Nexedi SA\',\n
         \'customer_organisation_email\': \'webproject-report@erp5.org\',\n
         \'customer_organisation_telephone\': \'+123 234 567 891\',\n
-        \'customer_organisation_street_address\': \n
-              \'270 bd Clémenceau, 59700 Marcq-en-Baroeul\',\n
+        \'customer_organisation_street_address\': \'270 bd Clémenceau, 59700 Marcq-en-Baroeul\',\n
         \'customer_organisation_city\': \'Lille\',\n
         \'customer_organisation_zip_code\': \'59700\',\n
         \'customer_organisation_region\': \'France\',\n
@@ -84,39 +83,16 @@ configuration_dict = {\n
 # XXX FIXME The follow configuration are not related to configuration itself\n
 # but related to system or inicial setup. Split this script later in order\n
 # To have a clean definition of what is the User Configuration Values only.\n
-        "functional_test_username" : "ERP5TypeTestCase", \n
+        "functional_test_username" : "ERP5TypeTestCase",\n
         "functional_test_password" : "",\n
 \n
         "business_configuration_id": "STANDARD_CONFIGURATOR_TEST",\n
         \'bt_repository_list\':[\'http://www.erp5.org/dists/snapshot/bt5/\'],\n
-        \n
-        # Release management\n
-        \'erp5_instance_version\': \'5.4.1\',\n
 \n
-        \'now\': DateTime(),\n
-        # server side group\n
-        \'tiolive_group_relative_url\': \'nexedi/tio\',\n
         # More configurations\n
-        "oood_hostname": "localhost", \n
-        "oood_port": 8008, \n
-\n
-        # Valid Assignment Date\n
-        "assignment_start_date_year": 2010,\n
-        "assignment_start_date_month": 07,\n
-        "assignment_start_date_day":13,\n
-        "assignment_stop_date_year": 2999,\n
-        "assignment_stop_date_month": 07,\n
-        "assignment_stop_date_day":13,\n
-         }\n
-\n
-is_upgrader = context.portal_templates.getInstalledBusinessTemplate("erp5_upgrader") is not None\n
-\n
-if not is_upgrader:\n
-  if "tiolive_server" in context.erp5_sql_connection.connection_string or \\\n
-      "test_client" in context.erp5_sql_connection.connection_string:\n
-    configuration_dict[\'oood_port\'] = 48009\n
-    configuration_dict[\'tiolive_virtual_database_string\'] = \'tiolive_virtual@127.0.0.1:43307 root\'\n
-    configuration_dict[\'witch_server_url\'] = \'http://localhost:48090/erp5/\'\n
+        "oood_hostname": "localhost",\n
+        "oood_port": 8008,\n
+        }\n
 \n
 return configuration_dict\n
 </string> </value>
